--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             imgs[i].classList.add('active');
         };
 
-        document.querySelector('.prev_image').onclick = () => {
+        document.querySelector('.previous_image').onclick = () => {
             imgs[i].classList.remove('active');
             i = i === 0 ? imgs.length - 1 : i - 1;
             imgs[i].classList.add('active');
